--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@gsap/react": "^2.1.0",
     "clsx": "^2.1.0",
-    "gsap": "^3.12.5",
+    "framer-motion": "^11.1.7",
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
