--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@strapi/blocks-react-renderer": "^1.0.1",
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "framer-motion": "^11.1.7",
     "next": "14.2.1",
