--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "framer-motion": "^11.1.7",
+    "gsap": "^3.12.5",
     "next": "14.2.1",
     "next-sanity": "^9.0.12",
     "react": "^18",
