--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "react-share": "^5.1.0",
     "react-slick": "^0.30.2",
     "sanity": "^3.39.1",
     "slick-carousel": "^1.8.1",
